[gd_scene load_steps=6 format=3 uid="uid://c73kovjg5pcd3"]

[ext_resource type="Script" path="res://util/ui.gd" id="1_1j2nn"]
[ext_resource type="Script" path="res://util/fps_counter.gd" id="1_mxmhq"]
[ext_resource type="Texture2D" uid="uid://bm8qkikgyd8rp" path="res://Settings Gear.png" id="3_bbais"]
[ext_resource type="Theme" uid="uid://b0sf7fmx7al7i" path="res://theme.tres" id="3_qlyme"]
[ext_resource type="PackedScene" uid="uid://dgcktkvlefs46" path="res://tick_button.tscn" id="4_0yspv"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_1j2nn")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = -1
anchor_right = 0.052
anchor_bottom = 0.09
offset_left = 20.0
offset_top = 20.0
offset_right = 0.159996
offset_bottom = -0.200005
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
columns = 2

[node name="FPSLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "FPS:"

[node name="FPS" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BallCountLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Dirt Balls:"

[node name="BallCount" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChargeLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Charge:"

[node name="Charge" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChargingLabel" type="Label" parent="PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
text = "Charging!"

[node name="StallingLabel" type="Label" parent="PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
text = "Stalling!"

[node name="FPS Counter" type="Node3D" parent="."]
script = ExtResource("1_mxmhq")

[node name="SettingsButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 80.0
grow_horizontal = 0
icon = ExtResource("3_bbais")
expand_icon = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = -11.5
offset_right = 64.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="PressToAttach" type="Label" parent="CenterContainer"]
visible = false
layout_mode = 2
text = "Press E to attach"

[node name="SettingsMenu" type="PanelContainer" parent="."]
visible = false
offset_left = 240.0
offset_top = 135.0
offset_right = 1680.0
offset_bottom = 945.0
theme = ExtResource("3_qlyme")

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"TitleLabel"
text = "Settings"

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsMenu/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsMenu/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="SpawnRateLabel" type="Label" parent="SettingsMenu/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_type_variation = &"MediumLabel"
text = "Spawn Rate:"

[node name="TickButton" parent="SettingsMenu/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_0yspv")]
layout_mode = 2
size_flags_vertical = 4
value = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="SettingsMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="SettingsMenu/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_type_variation = &"MediumLabel"
text = "Controls:
"

[node name="GridContainer" type="GridContainer" parent="SettingsMenu/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_type_variation = &"DisplayGridContainer"
columns = 2

[node name="Control" type="Control" parent="SettingsMenu/VBoxContainer/HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control2" type="Control" parent="SettingsMenu/VBoxContainer/HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="SettingsMenu/VBoxContainer/HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
theme_type_variation = &"MediumLabel"
text = "Toggle Dirt Spawning"

[node name="Label2" type="Label" parent="SettingsMenu/VBoxContainer/HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
theme_type_variation = &"MediumLabel"
text = "X"

[node name="Label3" type="Label" parent="SettingsMenu/VBoxContainer/HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
theme_type_variation = &"MediumLabel"
text = "Move Arm"

[node name="Label4" type="Label" parent="SettingsMenu/VBoxContainer/HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
theme_type_variation = &"MediumLabel"
text = "Numpad"

[node name="Label5" type="Label" parent="SettingsMenu/VBoxContainer/HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
theme_type_variation = &"MediumLabel"
text = "Movement"

[node name="Label6" type="Label" parent="SettingsMenu/VBoxContainer/HBoxContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
theme_type_variation = &"MediumLabel"
text = "WASD"

[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="value_changed" from="SettingsMenu/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/TickButton" to="." method="_on_tick_button_value_changed"]
